--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: Aynat Cortez.
 description: Blog de presentacion laboral.
-baseurl: "/Blog" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://amazing-lalande-ea15cc.netlify.app/"
 
 # User settings
 username: Aynat Cortez.
