finals updates on aboutme

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://amazing-lalande-ea15cc.netlify.app/"
 
 # User settings
 username: Aynat Cortez.
-user_description: Hola! Soy aynat cortez, normalmente realizo paginas web con html y css y disfruto del proceso. Actualmente estoy estudiando Ingenieria de sistemas en la universidad nacional de ingeniria, Me gusta crear cosas y ayudar a los demas a crear nuevas cosas.
+user_description: Hola! Soy aynat cortez, normalmente realizo paginas web con html y css y disfruto del proceso. Actualmente estoy estudiando Ingenieria de sistemas en la universidad nacional de ingenieria, Me gusta crear cosas y ayudar a los demas a crear nuevas cosas.
 user_title: Estudiante de ingeniera en sistemas
 email: aynatcm@gmail.com
 twitter_username: AynatCortez
